--- a/doc.html
+++ b/doc.html
@@ -498,7 +498,7 @@
     <section class="section-gap-lg fooo mt-5">
         <div class="container footeer">
             <div class="row">
-                <div class="col-md-3 aos-init aos-animate" data-aos="fade-right">
+                <div class="col-md-4 aos-init aos-animate" data-aos="fade-right">
                     <img src="assets/img/LogoV2.png" alt="Logo White" class="img-fluid w-100 mb-4">
                     <div>
                         <p><strong>PT SAHALA INDONESIA</strong></p>
@@ -515,7 +515,7 @@
 <li id="menu-item-1058" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1058"><a href="about.html">Who We Are</a></li>
 </ul>                    </div>
                     <div class="my-4">
-                        <p class="text-white">Innovations</p>
+                        <!-- <p class="text-white">Innovations</p> -->
                                             </div>
                 </div>
                 <div class="col-md-3 aos-init aos-animate" data-aos="fade-right">
@@ -523,7 +523,7 @@
                         <p class="text-white">Product and commodity</p>
                         <ul id="menu-product-and-commodity" class="list-menu">
 <li id="menu-item-300" class="menu-item menu-item-type-post_type menu-item-object-products menu-item-300"><a href="product_palm.html">Palm Broom Stick</a></li>
-<li id="menu-item-301" class="menu-item menu-item-type-post_type menu-item-object-products menu-item-301"><a href="product_charcoal.html">Coconut Shell Charcoal Charcoal</a></li>
+<li id="menu-item-301" class="menu-item menu-item-type-post_type menu-item-object-products menu-item-301"><a href="product_charcoal.html">Coconut Shell Charcoal</a></li>
 <li id="menu-item-302" class="menu-item menu-item-type-post_type menu-item-object-products menu-item-302"><a href="product_coconut.html">Semi Husked Coconut</a></li>
 </ul>                    </div>
                 </div>
