--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <title>Sahala Indonesia</title>
-  <meta content="Sahala Indonesia !" name="description">
+  <meta content="Sahala Indonesia!" name="description">
   <meta content="Sahala" name="keywords">
 
   <!-- Favicons -->
@@ -92,7 +92,7 @@
       <div class="row justify-content-center">
         <div class="col-xl-8" data-aos="fade-up" data-aos-duration="1000">
           <!-- <h2>Supplying across the globe</h2> -->
-          <h1>
+          <h1 style="font-size: 4rem;">
             <span>
               Lead
             </span>
@@ -117,7 +117,7 @@
         <div class="row">
           <div class="col-lg-1"></div>
           <div class="col-lg-5" data-aos="fade-right" data-aos-duration="1000">
-            <img src="assets/img/Tapioka.jpg" class="aboutImage" alt="tapioka">
+            <img src="assets/img/LogoV2.png" class="aboutImage" alt="tapioka">
           </div>
           <div class="col-lg-5" data-aos="fade-left" data-aos-duration="1000">
             <h3>
@@ -296,6 +296,81 @@
                         </div>
                   </div>
               </li>
+              <li>
+                <div class="uk-card uk-card-default p-5">
+                    <div class="uk-card-media-top card-img-top">
+                        <img class = "uk-img" src="assets/img/palmbroom2.jpeg" alt="">
+                    </div>
+                    <div class="uk-card-body">
+                        <h3 class="uk-card-title"><strong>Palm Broom Stick</strong></h3>
+                        <p style="color: #212529;text-align: justify;">
+                          <span >
+                            <span>
+                              A <b>broom</b> is a cleaning tool consisting of stiff fibers attached to, 
+                              and roughly parallel to, a cylindrical handle, the <b>Palm Broom Sticks</b>
+                              It is thus a variety of brush with a long handle.
+                              It is commonly used in combination with a dustpan.
+                              A smaller whisk broom or brush is sometimes called a duster.
+                              <br>
+                              We provide palm broom stick with <b>best quality</b> and <b>competitive price</b>,
+                              there's 2 type of this product we provide (<b>Cut Bottom</b> and <b>No Cut Bottom</b>)
+                            </span>
+                              <br>
+                              <p>&nbsp</p>
+                              <a href="product_palm.html" class="more-info-btn-2"><b>MORE INFORMATION →</b></a>
+                          </span> 
+                          <br>
+                        </p>
+                    </div>
+                </div>
+            </li>
+            <li>
+                <div class="uk-card uk-card-default p-5">
+                    <div class="uk-card-media-top card-img-top">
+                        <img  class ="uk-img" src="assets/img/work-3.png" alt="">
+                    </div>
+                    <div class="uk-card-body">
+                        <h3 class="uk-card-title"><strong>Coconut Shell Charcoal</strong></h3>
+                        <p style="color: #212529;text-align: justify;">
+                          <span >
+                            <b>Coconut shell charcoal</b> is an <b>important product</b> derived from <b>coconut shells</b>. Shell charcoal is
+              widely used  as a <b>household and industrial fuel</b>. Shell charcoal is also used in the production of 
+              <b>activated carbon</b>. Activated carbon made from coconut shells has certain <b>advantages</b> because the 
+              raw material can <b>absorb</b> certain types of molecules. The shell is carbonized  using methods such 
+              as the pit method, drum method, and destructive distillation. 
+                              <br>
+                              <p>&nbsp</p>
+                              <a href="product_charcoal.html" class="more-info-btn-2"><b>MORE INFORMATION →</b></a>
+                          </span> 
+                          <br>
+                          
+                        </p>
+                      </div>
+                </div>
+            </li>
+            <li>
+                <div class="uk-card uk-card-default p-5">
+                    <div class="uk-card-media-top card-img-top">
+                        <img class = "uk-img img-responsive converthere" src="assets/img/Documentation/Semi-Husked Coconut 5.jpg" alt="">
+                    </div>
+                    <div class="uk-card-body">
+                        <h3 class="uk-card-title"><strong>Semi Husked Coconut</strong></h3>
+                        <p style="color: #212529;text-align: justify;">
+                          <span >
+                            Known for its <b>high quality packaging technology to prevent rot and discoloration</b>. 
+              This maintains the <b>freshness</b> and <b>nutritional value</b> of the product. 
+              Since it <b>does not use harmful fertilizers or pesticides</b>, it is <b>highly evaluated for its safety and nutritional value.</b>
+              These coconuts <b>add a unique flavor and aroma to flavorful and sweet foods</b>.
+              They are also used for <b>medicinal purposes</b>. Semi Husked coconuts has many uses and is a desirable product all over the world.
+                              <br>
+                              <p>&nbsp</p>
+                              <a href="product_coconut.html" class="more-info-btn-2"><b>MORE INFORMATION →</b></a> 
+                          </span> 
+                          <br>
+                        </p>
+                      </div>
+                </div>
+            </li>
           </ul>
   
           <a class="uk-position-center-left uk-position-small uk-hidden-hover" href="#" uk-slidenav-previous uk-slider-item="previous"></a>
@@ -476,7 +551,7 @@
     <section class="section-gap-lg fooo mt-5">
         <div class="container footeer">
             <div class="row">
-                <div class="col-md-3 aos-init aos-animate" data-aos="fade-right">
+                <div class="col-md-4 aos-init aos-animate" data-aos="fade-right">
                     <img src="assets/img/LogoV2.png" alt="Logo White" class="img-fluid w-100 mb-4">
                     <div>
                         <p><strong>PT SAHALA INDONESIA</strong></p>
@@ -493,7 +568,7 @@
 <li id="menu-item-1058" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1058"><a href="about.html">Who We Are</a></li>
 </ul>                    </div>
                     <div class="my-4">
-                        <p class="text-white">Innovations</p>
+                        <!-- <p class="text-white">Innovations</p> -->
                                             </div>
                 </div>
                 <div class="col-md-3 aos-init aos-animate" data-aos="fade-right">
