--- a/product_charcoal.html
+++ b/product_charcoal.html
@@ -128,7 +128,7 @@
                 <b>activated carbon</b>. Activated carbon made from coconut shells has certain <b>advantages</b> because the 
                 raw material can <b>absorb</b> certain types of molecules. The shell is carbonized  using methods such 
                 as the pit method, drum method, and destructive distillation. 
-                <br>
+                <br><br>
                 Cocoshell charcoal is very suitable as a raw material for activated carbon and briquettes. 
                 Otherwise,  you can immediately use the 
                 for cooking, grilling and grilling to enjoy green energy. Baking in coconut charcoal means getting
@@ -136,7 +136,7 @@
                 charcoal, so it burns cleanly. It's a  real wooden grill rather than a charcoal briquette. There is 
                 no coconut flavor. The smell of  charcoal is fairly neutral, except for the smell of grill smoke, 
                 which focuses on grilled food
-                <br>
+                <br><br>
                 Coconut Shell Charcoal has proven to be a suitable material for the development of golf courses
                 At golf courses, before planting grass, a layer of charcoal from the coconut shell  is laid down
                 with sand and other biomass to the specified depth.
@@ -160,7 +160,7 @@
                 </span> 
               </h3>
               <!-- <p>&nbsp;</p> -->
-              <p style="color: #212529; text-align: justify;">
+              <p style="color: #212529;">
                 <span>
                   1. <b>Delivery Time</b> : 30-35 days
                   <br>
@@ -274,7 +274,7 @@
     <section class="section-gap-lg fooo mt-5">
         <div class="container footeer">
             <div class="row">
-                <div class="col-md-3 aos-init aos-animate" data-aos="fade-right">
+                <div class="col-md-4 aos-init aos-animate" data-aos="fade-right">
                     <img src="assets/img/LogoV2.png" alt="Logo White" class="img-fluid w-100 mb-4">
                     <div>
                         <p><strong>PT SAHALA INDONESIA</strong></p>
@@ -291,7 +291,7 @@
 <li id="menu-item-1058" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1058"><a href="about.html">Who We Are</a></li>
 </ul>                    </div>
                     <div class="my-4">
-                        <p class="text-white">Innovations</p>
+                        <!-- <p class="text-white">Innovations</p> -->
                                             </div>
                 </div>
                 <div class="col-md-3 aos-init aos-animate" data-aos="fade-right">
