--- a/product_coconut.html
+++ b/product_coconut.html
@@ -178,7 +178,7 @@
                     <b>Packaging Detail</b> : Plastic Net Sack (50kgs)
                   </li>
                   <li>
-                    <b>Supply Ability</b> : up to 600 MTs/month
+                    <b>Supply Ability</b> : up to 150 MTs/month
                   </li>
                 </ol>
               </p>
@@ -316,7 +316,7 @@
     <section class="section-gap-lg fooo mt-5">
         <div class="container footeer">
             <div class="row">
-                <div class="col-md-3 aos-init aos-animate" data-aos="fade-right">
+                <div class="col-md-4 aos-init aos-animate" data-aos="fade-right">
                     <img src="assets/img/LogoV2.png" alt="Logo White" class="img-fluid w-100 mb-4">
                     <div>
                         <p><strong>PT SAHALA INDONESIA</strong></p>
@@ -333,7 +333,7 @@
 <li id="menu-item-1058" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1058"><a href="about.html">Who We Are</a></li>
 </ul>                    </div>
                     <div class="my-4">
-                        <p class="text-white">Innovations</p>
+                        <!-- <p class="text-white">Innovations</p> -->
                                             </div>
                 </div>
                 <div class="col-md-3 aos-init aos-animate" data-aos="fade-right">
