--- a/product_palm.html
+++ b/product_palm.html
@@ -128,7 +128,7 @@
                 It is thus a variety of brush with a long handle.
                 It is commonly used in combination with a dustpan.
                 A smaller whisk broom or brush is sometimes called a duster.
-                <br>
+                <br><br>
                 We provide palm broom stick with <b>best quality</b> and <b>competitive price</b>,
                 there's 2 type of this product we provide (<b>Cut Bottom</b> and <b>No Cut Bottom</b>)
               </span>
@@ -333,7 +333,7 @@
     <section class="section-gap-lg fooo mt-5">
         <div class="container footeer">
             <div class="row">
-                <div class="col-md-3 aos-init aos-animate" data-aos="fade-right">
+                <div class="col-md-4 aos-init aos-animate" data-aos="fade-right">
                     <img src="assets/img/LogoV2.png" alt="Logo White" class="img-fluid w-100 mb-4">
                     <div>
                         <p><strong>PT SAHALA INDONESIA</strong></p>
@@ -350,7 +350,7 @@
 <li id="menu-item-1058" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1058"><a href="about.html">Who We Are</a></li>
 </ul>                    </div>
                     <div class="my-4">
-                        <p class="text-white">Innovations</p>
+                        <!-- <p class="text-white">Innovations</p> -->
                                             </div>
                 </div>
                 <div class="col-md-3 aos-init aos-animate" data-aos="fade-right">
