--- a/product_charcoal.html
+++ b/product_charcoal.html
@@ -164,7 +164,7 @@
                 <span>
                   1. <b>Delivery Time</b> : 30-35 days
                   <br>
-                  2. <b>Payment Currency</b>    : US Dollar
+                  2. <b>Payment Currency</b>    : US Dollar / IDR Rupiah
                   <br>
                   3. <b>Payment Terms</b> : 100% Irrevocable L/C at sight or Advance Payment (50% T/T, 50% Before Shipment)
                   <br>
