--- a/product_coconut.html
+++ b/product_coconut.html
@@ -155,12 +155,12 @@
                 </span> 
               </h3>
               <p>
-                <ol style="color: #212529; text-align: justify;">
+                <ol style="color: #212529">
                   <li>
                     <b>Delivery Time</b> : 15 days
                   </li>
                   <li>
-                    <b>Payment Currency</b>    : US Dollar
+                    <b>Payment Currency</b>    : US Dollar / IDR Rupiah
                   </li>
                   <li>
                     <b>Payment Terms</b> : 100% Irrevocable L/C at sight or Advance Payment (50% T/T, 50% Before Shipment)
