--- a/product_palm.html
+++ b/product_palm.html
@@ -235,11 +235,11 @@
                 </span> 
               </h3>
               <!-- <p>&nbsp;</p> -->
-              <p style="color: #212529; text-align: justify;">
+              <p style="color: #212529">
                 <span>
                   1. <b>Delivery Time</b> : 30-35 days
                   <br>
-                  2. <b>Payment Currency</b>    : US Dollar
+                  2. <b>Payment Currency</b>    : US Dollar / IDR Rupiah
                   <br>
                   3. <b>Payment Terms</b> : 100% Irrevocable L/C at sight or Advance Payment (50% T/T, 50% Before Shipment)
                   <br>
