--- a/index.html
+++ b/index.html
@@ -489,8 +489,8 @@
             <div class="info">
               <div class="address">
                 <i class="bi-instagram"></i>
-                <a href="https://www.instagram.com/sahala.id/"><h4>Instagram</h4></a>
-                <p>sahala.id</p>
+                <a href="https://www.instagram.com/sahala.indonesia/"><h4>Instagram</h4></a>
+                <p>sahala.indonesia</p>
                 <!-- <a href="https://goo.gl/maps/9RvyFM9j9FbNuYCa8"><p>Jl. HOS. Cokroaminoto No.6, RW.4, Gondangdia, Kec. Menteng, Kota Jakarta Pusat, Daerah Khusus Ibukota Jakarta</p></a> -->
               </div>
             </div>
@@ -552,12 +552,12 @@
         <div class="container footeer">
             <div class="row">
                 <div class="col-md-4 aos-init aos-animate" data-aos="fade-right">
-                    <img src="assets/img/LogoV2.png" alt="Logo White" class="img-fluid w-100 mb-4">
-                    <div>
-                        <p><strong>PT SAHALA INDONESIA</strong></p>
-                        <p><span>Jl. Garuda Sakti Kompleks Villa Garuda Mas Blok Blok E/4,</span><br>
+                    <img src="assets/img/LogoV2.png" alt="Logo White" class="img-fluid w-100">
+                    <div style="text-align: center">
+                        <p><strong>SAHALA EKSPOR INDONESIA</strong></p>
+                        <!-- <p><span>Jl. Garuda Sakti Kompleks Villa Garuda Mas Blok Blok E/4,</span><br>
                           <span>Labuhbaru Timur,Payung Sekaki, Pekanbaru, Riau, Indonesia, 28292</span></p>
-                        <p><a href="mailto:hello@boymaxwell.com">indonesia.sahala@gmail.com</a></p>
+                        <p><a href="mailto:hello@boymaxwell.com">indonesia.sahala@gmail.com</a></p> -->
                     </div>
                 </div>
                 <div class="col aos-init aos-animate" data-aos="fade-right">
