--- a/about.html
+++ b/about.html
@@ -273,66 +273,110 @@
     </section><!-- End Counts Section -->
     <!-- ======= Contact Section ======= -->
     <section id="contact" class="contact">
-        <div class="container">
-          <h1 class="mb-5" style="font-size: 32px;font-weight: bolder; text-align: center;" data-aos="fade-up">Do you have an inquiry but do not know where to turn?</h1>     
-          <!-- <div class="section-title">
-            <h2>Do you have an inquiry but do not know where to turn?</h2>
-            <p>Then contact one of our centers by the web inquiry form, online chat, telephone or email listed below.</p>
-          </div> -->
-        </div>
-  
-        <div>
-          <iframe style="border:0; width: 100%; height: 350px;" data-aos="fade-up" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d997.4150891928575!2d101.42482722918857!3d0.5098482999767534!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31d5a9ae9e97c8e9%3A0x62b2882bf7e9c3c1!2sEcofams%20Indonesia!5e0!3m2!1sen!2sid!4v1641824263138!5m2!1sen!2sid" frameborder="0" allowfullscreen></iframe>
-        </div>
-  
-        <div class="container">
-          <div class="row mt-5">
-            <div class="col-lg-6 mt-2" data-aos="fade-up">
-              <div class="info ">
-                <div class="address">
-                  <i class="ri-map-pin-line"></i>
-                  <a href="https://goo.gl/maps/D1oRTqs7C6puneveA"><h4>Location</h4></a>
-                  <p>Jl. Garuda Sakti Kompleks Villa Garuda Mas Blok Blok E/4, Labuhbaru Timur, Payung Sekaki, Pekanbaru, Riau, Indonesia, 28292
-                  </p>
-                  <!-- <a href="https://goo.gl/maps/9RvyFM9j9FbNuYCa8"><p>Jl. HOS. Cokroaminoto No.6, RW.4, Gondangdia, Kec. Menteng, Kota Jakarta Pusat, Daerah Khusus Ibukota Jakarta</p></a> -->
-                </div>
+      <div class="container">
+        <h1 class="mb-5" style="font-size: 32px;font-weight: bolder; text-align: center;" data-aos="fade-up">Do you have an inquiry but do not know where to turn?</h1>     
+        <!-- <div class="section-title">
+          <h2>Do you have an inquiry but do not know where to turn?</h2>
+          <p>Then contact one of our centers by the web inquiry form, online chat, telephone or email listed below.</p>
+        </div> -->
+      </div>
+
+      <div>
+        <iframe style="border:0; width: 100%; height: 350px;" data-aos="fade-up" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d997.4150891928575!2d101.42482722918857!3d0.5098482999767534!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31d5a9ae9e97c8e9%3A0x62b2882bf7e9c3c1!2sEcofams%20Indonesia!5e0!3m2!1sen!2sid!4v1641824263138!5m2!1sen!2sid" frameborder="0" allowfullscreen></iframe>
+      </div>
+
+      <div class="container">
+        <div class="row mt-5">
+          <div class="col-lg-5 mt-2" data-aos="fade-up">
+            <div class="info ">
+              <div class="address">
+                <i class="ri-map-pin-line"></i>
+                <a href="https://goo.gl/maps/D1oRTqs7C6puneveA"><h4>Location</h4></a>
+                <p>Jl. Garuda Sakti Kompleks Villa Garuda Mas Blok Blok E/4, <br>Labuhbaru Timur, Payung Sekaki, Pekanbaru, Riau, Indonesia, 28292
+                </p>
+                <!-- <a href="https://goo.gl/maps/9RvyFM9j9FbNuYCa8"><p>Jl. HOS. Cokroaminoto No.6, RW.4, Gondangdia, Kec. Menteng, Kota Jakarta Pusat, Daerah Khusus Ibukota Jakarta</p></a> -->
               </div>
             </div>
-            <div class="col-lg-2 mt-2" data-aos="fade-left">
-              <div class="info">
-                <div class="address">
-                  <i class="ri-mail-line"></i>
-                  <a href="mailto:indonesia.sahala@gmail.com"><h4>Email</h4></a>
-                  <p>indonesia.sahala@gmail.com</p>  
-                  <!-- <a href="https://goo.gl/maps/9RvyFM9j9FbNuYCa8"><p>Jl. HOS. Cokroaminoto No.6, RW.4, Gondangdia, Kec. Menteng, Kota Jakarta Pusat, Daerah Khusus Ibukota Jakarta</p></a> -->
-                </div>
-              </div>
-            </div>
-            <div class="col-lg-2 mt-2" data-aos="fade-left">
-              <div class="info">
-                <div class="address">
-                  <i class="ri-phone-line"></i>
-                  <a href="https://wa.me/6282173401269"><h4>Phone</h4></a>
-                  <p>+6282173401269</p>
-                  <!-- <a href="https://goo.gl/maps/9RvyFM9j9FbNuYCa8"><p>Jl. HOS. Cokroaminoto No.6, RW.4, Gondangdia, Kec. Menteng, Kota Jakarta Pusat, Daerah Khusus Ibukota Jakarta</p></a> -->
-                </div>
-              </div>
-            </div>
-            <div class="col-lg-2 mt-2" data-aos="fade-left">
-              <div class="info">
-                <div class="address">
-                  <i class="bi-instagram"></i>
-                  <a href="https://www.instagram.com/sahala.indonesia/"><h4>Instagram</h4></a>
-                  <p>sahala.indonesia</p>
-                  <!-- <a href="https://goo.gl/maps/9RvyFM9j9FbNuYCa8"><p>Jl. HOS. Cokroaminoto No.6, RW.4, Gondangdia, Kec. Menteng, Kota Jakarta Pusat, Daerah Khusus Ibukota Jakarta</p></a> -->
-                </div>
-              </div>
-            </div>
-  
           </div>
-  
+          <div class="col-lg-3 mt-2" data-aos="fade-left">
+            <div class="info">
+              <div class="address">
+                <i class="ri-mail-line"></i>
+                <a href="mailto:indonesia.sahala@gmail.com"><h4>Email</h4></a>
+                <p>indonesia.sahala@gmail.com</p>  
+                <!-- <a href="https://goo.gl/maps/9RvyFM9j9FbNuYCa8"><p>Jl. HOS. Cokroaminoto No.6, RW.4, Gondangdia, Kec. Menteng, Kota Jakarta Pusat, Daerah Khusus Ibukota Jakarta</p></a> -->
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-2 mt-2" data-aos="fade-left">
+            <div class="info">
+              <div class="address">
+                <i class="ri-phone-line"></i>
+                <a href="https://wa.me/6282173401269"><h4>Phone</h4></a>
+                <p>+6282173401269</p>
+                <!-- <a href="https://goo.gl/maps/9RvyFM9j9FbNuYCa8"><p>Jl. HOS. Cokroaminoto No.6, RW.4, Gondangdia, Kec. Menteng, Kota Jakarta Pusat, Daerah Khusus Ibukota Jakarta</p></a> -->
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-2 mt-2" data-aos="fade-left">
+            <div class="info">
+              <div class="address">
+                <i class="bi-instagram"></i>
+                <a href="https://www.instagram.com/sahala.indonesia/"><h4>Instagram</h4></a>
+                <p>sahala.indonesia</p>
+                <!-- <a href="https://goo.gl/maps/9RvyFM9j9FbNuYCa8"><p>Jl. HOS. Cokroaminoto No.6, RW.4, Gondangdia, Kec. Menteng, Kota Jakarta Pusat, Daerah Khusus Ibukota Jakarta</p></a> -->
+              </div>
+            </div>
+          </div>
+          <!-- <div class="col-lg-4">
+            <div class="info">
+              <div class="email">
+                <i class="ri-mail-line"></i>
+                <a href="mailto:energy.microlab@gmail.com"><h4>Email</h4></a>
+                <p>TBA</p>
+            </div>
+          </div>
+          <div class="col-lg-4">
+            <div class="info">
+              <div class="phone">
+                <i class="ri-phone-line"></i>
+                <a href="https://wa.me/6282129500404"><h4>Phone</h4></a>
+                <p>TBA</p>
+              </div>
+            </div>
+          </div> -->
+
+          <!-- <div class="col-lg-8 mt-5 mt-lg-0">
+
+            <form action="forms/contact.php" method="post" role="form" class="php-email-form">
+              <div class="row">
+                <div class="col-md-6 form-group">
+                  <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
+                </div>
+                <div class="col-md-6 form-group mt-3 mt-md-0">
+                  <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" required>
+                </div>
+              </div>
+              <div class="form-group mt-3">
+                <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" required>
+              </div>
+              <div class="form-group mt-3">
+                <textarea class="form-control" name="message" rows="5" placeholder="Message" required></textarea>
+              </div>
+              <div class="my-3">
+                <div class="loading">Loading</div>
+                <div class="error-message"></div>
+                <div class="sent-message">Your message has been sent. Thank you!</div>
+              </div>
+              <div class="text-center"><button type="submit">Send Message</button></div>
+            </form>
+
+          </div> -->
+
         </div>
-      </section><!-- End Contact Section -->
+
+      </div>
+    </section><!-- End Contact Section -->
     
   </main><!-- End #main -->
   <!-- FOOTER SECTION -->
