--- a/index.html
+++ b/index.html
@@ -454,12 +454,12 @@
 
       <div class="container">
         <div class="row mt-5">
-          <div class="col-lg-6 mt-2" data-aos="fade-up">
+          <div class="col-lg-5 mt-2" data-aos="fade-up">
             <div class="info ">
               <div class="address">
                 <i class="ri-map-pin-line"></i>
                 <a href="https://goo.gl/maps/D1oRTqs7C6puneveA"><h4>Location</h4></a>
-                <p>Jl. Garuda Sakti Kompleks Villa Garuda Mas Blok Blok E/4, Labuhbaru Timur, Payung Sekaki, Pekanbaru, Riau, Indonesia, 28292
+                <p>Jl. Garuda Sakti Kompleks Villa Garuda Mas Blok Blok E/4, <br>Labuhbaru Timur, Payung Sekaki, Pekanbaru, Riau, Indonesia, 28292
                 </p>
                 <!-- <a href="https://goo.gl/maps/9RvyFM9j9FbNuYCa8"><p>Jl. HOS. Cokroaminoto No.6, RW.4, Gondangdia, Kec. Menteng, Kota Jakarta Pusat, Daerah Khusus Ibukota Jakarta</p></a> -->
               </div>
@@ -485,7 +485,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-1 mt-2" data-aos="fade-left">
+          <div class="col-lg-2 mt-2" data-aos="fade-left">
             <div class="info">
               <div class="address">
                 <i class="bi-instagram"></i>
