--- a/product_charcoal.html
+++ b/product_charcoal.html
@@ -147,8 +147,52 @@
           <div class="col-lg-1"></div>
         </div>
         <div class="row mt-5">
+          <div class="col-lg-1"></div>
+          <div class="col-lg-5" data-aos="fade-right" data-aos-duration="1000">
+            <h3>
+              <span class="section-title" style="color: #dab41c; font-weight: 700 ;">
+                <b>Detail about</b>
+              </span>
+              <br>
+              <span style="font-size: 40px;">
+                <b>Our Specification</b>
+              </span> 
+            </h3>
+            <p>
+              <ul style="color: #212529; text-align: justify;">
+                <li>
+                  Moisture < 10%
+                </li>
+                <li>
+                  Volatile matter < 13%
+                </li>
+                <li>
+                  Ash : 2-3%
+                </li>
+                <li>
+                  Dust content < 4%
+                </li>
+                <li>
+                  Natural pieces > 2cm
+                <li>
+                  No yellow sand or yellow dirt
+                </li>
+                <li>
+                  Clean and no other foreign matters
+                </li>
+              </ul>
+            </p>
+          </div>
+          <div class="col-lg-5" data-aos="fade-left" data-aos-duration="1000">
+              <img src="assets/img/Documentation/Arang (11).jpg" class="aboutImage" alt="tapioka">
+          </div>
+          <div class="col-lg-1"></div>
+      </div>
+        <div class="row mt-5">
             <div class="col-lg-1"></div>
-            
+            <div class="col-lg-5" data-aos="fade-right" data-aos-duration="1000">
+              <img src="assets/img/ask.jpg" class="aboutImage" alt="tapioka">
+            </div>
             <div class="col-lg-5" data-aos="fade-left" data-aos-duration="1000">
               <h3>
                 <span class="section-title" style="color: #dab41c; font-weight: 700 ;">
@@ -181,9 +225,7 @@
               </p>
               <!-- <a href="#" class="more-info-btn"><b>MORE INFORMATION →</b></a> -->
             </div>
-            <div class="col-lg-5" data-aos="fade-right" data-aos-duration="1000">
-                <img src="assets/img/ask.jpg" class="aboutImage" alt="tapioka">
-              </div>
+            
             <div class="col-lg-1"></div>
         </div>
         <div class="row mt-5">
